--- a/assets/css/ioda/sass/pages/_entity.scss
+++ b/assets/css/ioda/sass/pages/_entity.scss
@@ -104,6 +104,10 @@
       /***************/
       .canvasjs-chart-toolbar {
         border: none!important;
+
+        @include respond(screen-970) {
+          top: 3rem!important;
+        }
       }
       .canvasjs-chart-toolbar button[title="Reset"] {
         background: linear-gradient(2deg, $color-secondary-dark, $color-secondary-light, $color-secondary-dark, $color-secondary-light);
@@ -178,8 +182,8 @@
         cursor: pointer;
         background: linear-gradient(
                         2deg
-                , #286F86, #7FB7CA);
-        color: #fff;
+                , $color-secondary-dark, $color-secondary-light);
+        color: $color-white;
         padding: 0.4rem 0.6rem;
         box-shadow: 0 1px 2px #9f9d9d;
         display: flex;
